<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_plans"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_plans" />

    <item
        android:id="@+id/nav_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_add" />

    <item
        android:id="@+id/nav_progress"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_progress" />

    <item
        android:id="@+id/nav_more"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/nav_more" />

</menu>
